# Autonomous_Mobile_Robot

./: .gitignore  Dockerfile  README.md  apt_packages.txt  requirements.txt  ros2_packages.txt  start_robot.sh  test_whisper.py
firmware/esp32_motor_battery/: esp32_motor_battery.ino
robot_ui/: app.js  index.html  style.css
src/control_pkg/: package.xml  setup.py
src/control_pkg/control_pkg/: decision_node_wo_gesture.py  decision_node_wo_watchdog.py  motor_control_node.py  watchdog_node.py
src/control_pkg/launch/: control.launch.py
src/interaction_pkg/: package.xml  setup.cfg  setup.py
src/interaction_pkg/interaction_pkg/: llm_node.py  llm_node_ollama.py  stt_node.py  stt_node_ wo_llm.py  tts_node.py
src/interaction_pkg/launch/: interaction.launch.py
src/perception_pkg/: package.xml  setup.py
src/perception_pkg/launch/: perception.launch.py  perception_pipeline.launch.py
src/perception_pkg/perception_pkg/: 1camera_node.py  1display_node.py  chatgpt_camera_node.py  chatgpt_display_node.py  chatgpt_yolo_perception_node.py  detector_node.py  detector_node_1hand.py  less_flick_detector_node.py  more_flick_detector_node.py  tracker_node.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: my_robot.launch.py  my_robot_v1.launch.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/web_video_server/: .clang-tidy  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  config-extras.cmake  package.xml  plugins.xml
src/web_video_server/.github/workflows/: ci.yml
src/web_video_server/doc/: custom-streamer-plugin.md
src/web_video_server/include/web_video_server/: multipart_stream.hpp  streamer.hpp  utils.hpp  web_video_server.hpp
src/web_video_server/include/web_video_server/streamers/: h264_streamer.hpp  image_transport_streamer.hpp  jpeg_streamers.hpp  libav_streamer.hpp  png_streamers.hpp  ros_compressed_streamer.hpp  vp8_streamer.hpp  vp9_streamer.hpp
src/web_video_server/src/: multipart_stream.cpp  streamer.cpp  utils.cpp  web_video_server.cpp  web_video_server_node.cpp
src/web_video_server/src/streamers/: h264_streamer.cpp  image_transport_streamer.cpp  jpeg_streamers.cpp  libav_streamer.cpp  png_streamers.cpp  ros_compressed_streamer.cpp  vp8_streamer.cpp  vp9_streamer.cpp
